Modifications in Code

--- a/python/Graph.ipynb
+++ b/python/Graph.ipynb
@@ -202,7 +202,27 @@
     }
    ],
    "source": [
-    "get_one_step_nodes('A', 'D','E')"
+    "get_one_step_nodes('A', 'D','E', cond='and')  # Finds intersection of all nodes reached from A, D and E"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A', 'B', 'C', 'E', 'F', 'G', 'H', 'I'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_one_step_nodes('A', 'D','E', cond='or')  # Finds union of all nodes reached from A, D and E"
    ]
   },
   {
@@ -214,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +283,7 @@
        "{'A', 'B', 'C', 'D', 'E', 'G', 'H'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +303,7 @@
        "{'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
